--- a/docs/index.css
+++ b/docs/index.css
@@ -43,14 +43,20 @@
     justify-content: center;
     align-items: center;
     margin: auto;
-    margin-top: 15px;
+    margin-top: 11px;
 
     cursor: pointer;
     /* padding: auto; */
 }
 
+.my_photo-circle img {
+    max-width: 138px;
+    max-height: 138px;
+    border-radius: 50%;
+}
+
 .my_photo .my_photo-circle2 {
-    border: 1px solid #3C81A8;
+    border: 4px solid #3C81A8;
     height: 180px;
     width: 180px;
     border-radius: 50%;
@@ -138,6 +144,12 @@
     color: white;
 }
 
+#github {
+    border: 1px solid #0040ff;
+    padding: .4rem;
+    border-radius: 10%;
+}
+
 .container-body {
     display: flex;
     flex-direction: column;
@@ -165,6 +177,7 @@
 #formacao-icon h2 {
     white-space: nowrap;
     font-family: 'Righteous', cursive;
+    color: #8A6D3B;
 }
 
 .formacao p {
@@ -334,6 +347,35 @@ body.light {
     border-radius: 20px;
     margin-left: 35px;
 }
+
+.light .my_photo-circle {
+    border: 8px solid #bba34e;
+    transition: all 0.5s ease-in-out;
+}
+
+.light #about_me-icon h2 {
+    color: #bba34e;
+    transition: all 0.5s ease-in-out;
+}
+
+.light #formacao-icon h2 {
+    color: #bba34e;
+}
+
+.light .tecnologias h2 {
+    color:#bba34e;
+    transition: all 0.5s ease-in-out;
+}
+
+.light .about_me-icon-circle {
+    background-color: #bba34e;
+    transition: all 0.5s ease-in-out;
+}
+
+.light .formacao-icon-circle {
+    background-color: #bba34e;
+}
+
 #theme-toggle {
     display: flex;
     justify-content: right;
