--- a/src/css/global.style.css
+++ b/src/css/global.style.css
@@ -44,14 +44,20 @@
     justify-content: center;
     align-items: center;
     margin: auto;
-    margin-top: 15px;
+    margin-top: 11px;
 
     cursor: pointer;
     /* padding: auto; */
 }
 
+.my_photo-circle img {
+    max-width: 138px;
+    max-height: 138px;
+    border-radius: 50%;
+}
+
 .my_photo .my_photo-circle2 {
-    border: 1px solid #3C81A8;
+    border: 4px solid #3C81A8;
     height: 180px;
     width: 180px;
     border-radius: 50%;
@@ -139,6 +145,12 @@
     color: white;
 }
 
+#github {
+    border: 1px solid #0040ff;
+    padding: .4rem;
+    border-radius: 10%;
+}
+
 .container-body {
     display: flex;
     flex-direction: column;
@@ -166,6 +178,7 @@
 #formacao-icon h2 {
     white-space: nowrap;
     font-family: 'Righteous', cursive;
+    color: #8A6D3B;
 }
 
 .formacao p {
