favicon, readme, animations, best practices

--- a/src/css/changer-theme.css
+++ b/src/css/changer-theme.css
@@ -38,7 +38,7 @@
 .label .ball {
     background-color: #0e569e;
     border-radius: 50%;
-    position: absolute;
+    position: fixed;
     top: 2px;
     left: 2px;
     height: 22px;
@@ -47,8 +47,18 @@
     transition: transform 0.2s linear;
 }
 
+.label .ball:hover {
+    transition: all 0.2s linear;
+    background-color: #329dd2;
+}
+
 .light .label .ball {
     background-color: #e38c12;
+}
+
+.light .label .ball:hover {
+    transition: all 0.2s linear;
+    background-color: #ffb25f;
 }
 
 .light .label {
