--- a/src/css/global.style.css
+++ b/src/css/global.style.css
@@ -9,7 +9,7 @@
 }
 
 .dark {
-    background-color: #0B1319;
+    background: #0B1319;
     color: rgb(255, 255, 255);
 
     transition: all 0.5s ease-in-out;
@@ -60,7 +60,14 @@
     height: 180px;
     width: 180px;
     border-radius: 50%;
+    animation: gradient-animation-circle2 1.2s infinite alternate;
+    background-size: 100% auto;;
 }
+
+@keyframes gradient-animation-circle2 {
+    0% { border-color: #3C81A8; }
+    100% { border-color:  #68c660; }
+  }
 
 .my_photo-circle2:active {
     transform: scale(1.1);
@@ -78,6 +85,7 @@
 .name_title>h1 {
     font-family: 'Righteous', cursive;
     white-space: nowrap;
+    letter-spacing: 1px;
     color: #395E97;
 }
 
@@ -173,7 +181,7 @@
     margin-right: 20%;
 }
 
-#about_me-icon h2 {
+.about_me-icon h2 {
     white-space: nowrap;
     font-family: 'Righteous', cursive;
     color: #8A6D3B;
@@ -185,13 +193,13 @@
     margin-left: 70px;
 }
 
-#formacao-icon h2 {
+.formacao-icon h2 {
     white-space: nowrap;
     font-family: 'Righteous', cursive;
     color: #8A6D3B;
 }
 
-.formacao p {
+.formacao li {
 
     margin-left: 70px;
 }
@@ -222,6 +230,8 @@
     align-items: center;
 
     width: 50000px;
+
+    margin-bottom: 50px;
 }
 
 .tecnologias>h2 {
@@ -274,7 +284,7 @@ body.light {
 /* circulos ICONS */
 
 /* about me */
-#about_me-icon {
+.about_me-icon {
     display: flex;
     flex-direction: row;
     gap: 20px;
@@ -292,16 +302,20 @@ body.light {
     align-items: center;
 }
 
-#about_me-icon svg {
+.about_me-icon svg {
     fill: black;
 }
 
 /* Formacoes */
-#formacao-icon {
+.formacao-icon {
     display: flex;
     flex-direction: row;
     gap: 20px;
     align-items: center;
+}
+
+.formacao-icon h2 {
+    color: #8A6D3B;
 }
 
 .formacao-icon-circle {
@@ -317,7 +331,7 @@ body.light {
     margin-bottom: 5px;
 }
 
-#formacao-icon svg {
+.formacao-icon svg {
     fill: black;
 }
 
@@ -325,7 +339,7 @@ body.light {
     transition: all 0.4s ease-in-out;
     height: 55px;
     width: 55px;
-    background-color: #8f3030;;
+    background-color: #8f4b30;;
 }
 
 .formacao-icon-circle svg:hover {
@@ -333,10 +347,11 @@ body.light {
     height: 37px;
 }
 
-#formacao-icon h2:hover {
+.formacao-icon h2:hover {
     transition: all 0.4s ease-in-out;
-    font-size: 30px;
-    color: #8f3030;;
+    font-size: 27px;
+    color: #8f4b30;;
+    text-decoration: underline;
 }
 
 /* ------------ Angular circle and Java circle --------------- */
@@ -375,4 +390,70 @@ body.light {
     height: 20px;
     border-radius: 20px;
     margin-left: 35px;
+}
+
+.btn_download {
+    /* border: 1px solid green; */
+    display: flex;
+
+    position: absolute;
+    right: 130px;
+    top: 15px;
+}
+
+.btn_download a button {
+    border-radius: 10px;
+    background-color: #395E97;
+    border-style: none;
+    cursor: pointer;
+    font-size: 13px;
+    padding: 6px;
+    color: white;
+}
+
+.btn_download a button:hover {
+    transition: all 0.4s ease-in-out;
+    scale: 1.1;
+    background-color: #64e582;
+    color: black;
+}
+
+.btn_download a button:active {
+    position: relative;
+    bottom: 3px;
+}
+
+
+.bottom-bar_opacity {
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+
+
+    background-color: #192437;
+    padding: 18px;
+
+    opacity: 70%;
+}
+
+.bottom-bar a {
+    position: fixed;
+    right: 20px;
+    bottom: 7.5px;
+    margin-right: 30px;
+    color: white;
+    font-size: 14px;
+    font-family: 'Courier New', Courier, monospace;
+    
+}
+
+.bottom-bar a:hover {
+    color: #50adff;
+}
+
+.bottom-bar img {
+    position: fixed;
+    right: 13px;
+    bottom: 2px;
+
 }
