--- a/docs/index.css
+++ b/docs/index.css
@@ -8,7 +8,7 @@
 }
 
 .dark {
-    background-color: #0B1319;
+    background: #0B1319;
     color: rgb(255, 255, 255);
 
     transition: all 0.5s ease-in-out;
@@ -59,7 +59,14 @@
     height: 180px;
     width: 180px;
     border-radius: 50%;
+    animation: gradient-animation-circle2 1.2s infinite alternate;
+    background-size: 100% auto;;
 }
+
+@keyframes gradient-animation-circle2 {
+    0% { border-color: #3C81A8; }
+    100% { border-color:  #68c660; }
+  }
 
 .my_photo-circle2:active {
     transform: scale(1.1);
@@ -77,6 +84,7 @@
 .name_title>h1 {
     font-family: 'Righteous', cursive;
     white-space: nowrap;
+    letter-spacing: 1px;
     color: #395E97;
 }
 
@@ -172,7 +180,7 @@
     margin-right: 20%;
 }
 
-#about_me-icon h2 {
+.about_me-icon h2 {
     white-space: nowrap;
     font-family: 'Righteous', cursive;
     color: #8A6D3B;
@@ -184,13 +192,13 @@
     margin-left: 70px;
 }
 
-#formacao-icon h2 {
+.formacao-icon h2 {
     white-space: nowrap;
     font-family: 'Righteous', cursive;
     color: #8A6D3B;
 }
 
-.formacao p {
+.formacao li {
 
     margin-left: 70px;
 }
@@ -221,6 +229,8 @@
     align-items: center;
 
     width: 50000px;
+
+    margin-bottom: 50px;
 }
 
 .tecnologias>h2 {
@@ -273,7 +283,7 @@ body.light {
 /* circulos ICONS */
 
 /* about me */
-#about_me-icon {
+.about_me-icon {
     display: flex;
     flex-direction: row;
     gap: 20px;
@@ -291,16 +301,20 @@ body.light {
     align-items: center;
 }
 
-#about_me-icon svg {
+.about_me-icon svg {
     fill: black;
 }
 
 /* Formacoes */
-#formacao-icon {
+.formacao-icon {
     display: flex;
     flex-direction: row;
     gap: 20px;
     align-items: center;
+}
+
+.formacao-icon h2 {
+    color: #8A6D3B;
 }
 
 .formacao-icon-circle {
@@ -316,7 +330,7 @@ body.light {
     margin-bottom: 5px;
 }
 
-#formacao-icon svg {
+.formacao-icon svg {
     fill: black;
 }
 
@@ -324,7 +338,7 @@ body.light {
     transition: all 0.4s ease-in-out;
     height: 55px;
     width: 55px;
-    background-color: #8f3030;;
+    background-color: #8f4b30;;
 }
 
 .formacao-icon-circle svg:hover {
@@ -332,10 +346,11 @@ body.light {
     height: 37px;
 }
 
-#formacao-icon h2:hover {
+.formacao-icon h2:hover {
     transition: all 0.4s ease-in-out;
-    font-size: 30px;
-    color: #8f3030;;
+    font-size: 27px;
+    color: #8f4b30;;
+    text-decoration: underline;
 }
 
 /* ------------ Angular circle and Java circle --------------- */
@@ -374,6 +389,72 @@ body.light {
     height: 20px;
     border-radius: 20px;
     margin-left: 35px;
+}
+
+.btn_download {
+    /* border: 1px solid green; */
+    display: flex;
+
+    position: absolute;
+    right: 130px;
+    top: 15px;
+}
+
+.btn_download a button {
+    border-radius: 10px;
+    background-color: #395E97;
+    border-style: none;
+    cursor: pointer;
+    font-size: 13px;
+    padding: 6px;
+    color: white;
+}
+
+.btn_download a button:hover {
+    transition: all 0.4s ease-in-out;
+    scale: 1.1;
+    background-color: #64e582;
+    color: black;
+}
+
+.btn_download a button:active {
+    position: relative;
+    bottom: 3px;
+}
+
+
+.bottom-bar_opacity {
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+
+
+    background-color: #192437;
+    padding: 18px;
+
+    opacity: 70%;
+}
+
+.bottom-bar a {
+    position: fixed;
+    right: 20px;
+    bottom: 7.5px;
+    margin-right: 30px;
+    color: white;
+    font-size: 14px;
+    font-family: 'Courier New', Courier, monospace;
+    
+}
+
+.bottom-bar a:hover {
+    color: #50adff;
+}
+
+.bottom-bar img {
+    position: fixed;
+    right: 13px;
+    bottom: 2px;
+
 }
 #theme-toggle {
     display: flex;
@@ -415,7 +496,7 @@ body.light {
 .label .ball {
     background-color: #0e569e;
     border-radius: 50%;
-    position: absolute;
+    position: fixed;
     top: 2px;
     left: 2px;
     height: 22px;
@@ -424,8 +505,18 @@ body.light {
     transition: transform 0.2s linear;
 }
 
+.label .ball:hover {
+    transition: all 0.2s linear;
+    background-color: #329dd2;
+}
+
 .light .label .ball {
     background-color: #e38c12;
+}
+
+.light .label .ball:hover {
+    transition: all 0.2s linear;
+    background-color: #ffb25f;
 }
 
 .light .label {
@@ -519,14 +610,19 @@ body.light {
         margin-left: 10px;
     }
 
-    .formacao p {
+    .formacao li {
 
-        margin-left: 10px;
+        margin-left: 70px;
     }
 
 }
 
 @media screen and (max-width: 500px) {
+
+    .btn_download {
+        position: absolute;
+        right: 90px;
+    }
 
     container-top {
         margin-top: 1px;
